--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
-package.json
+package.jason
 {
   "name": "gemini-vercel-vite-starter",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,16 +10,18 @@ package.json
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@google/generative-ai": "^0.7.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.10"
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "typescript": "^5.2.2",
+    "vite": "^4.5.0"
   }
 }
-Add package.json
+add package.json
+
+
