Fix package.json formatting and structure

--- a/src/src/api/package.json
+++ b/src/src/api/package.json
@@ -1,5 +1,9 @@
 package.json
 {
+  "name": "gemini-vercel-vite-starter"
+}
+
+{
   "name": "gemini-vercel-vite-starter",
   "private": true,
   "type": "module",
