--- a/src/src/api/package.json
+++ b/src/src/api/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "gemini-vercel-vite-starter"
-}
-
-{
   "name": "gemini-vercel-vite-starter",
   "private": true,
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,8 +16,8 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.0.0",
     "vite": "^5.0.0"
   }
 }
-fix package.json (valid JSON for Vite)
-
+fix: valid package.json
